fix: change style of header so isn't too wide anymore

--- a/frontend/angular-trading-site/src/app/app.component.css
+++ b/frontend/angular-trading-site/src/app/app.component.css
@@ -35,6 +35,7 @@
 .header-container {
   grid-area: header;
   background-color: white;
+  margin: 0;
 
 }
 
